--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ keras-facenet==0.3.2
 keras==3.9.1
 joblib==1.4.2
 numpy==1.26.4
-opencv-python==4.11.0.86
+- opencv-python==4.11.0.86
++ opencv-python-headless==4.11.0.86
 
 
